# sec-edgar-notebooks

./: .env.template  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
data/extra/: SEC CIK - Stocker Ticker list - Executives - match by CIK.csv
data/sample/form10k/: index.csv
notebooks/experiments/: company-facts.ipynb  cypher-chain.ipynb  geocoding.ipynb  structured-chain.ipynb  vector-chain.ipynb
notebooks/experiments/data/: cusip6-to-cik-mapping.csv
notebooks/kg-construction/: 0-reset.ipynb  1-mvg.ipynb  2-expand-context.ipynb  3-add-structured-data.ipynb  4-chat-with-kg.ipynb  4-geocoding.ipynb  5-chat-with-kg.ipynb  9-construct-with-cypher.ipynb  cypher_parser.py  kg-construction.cypher  shared.ipynb
notebooks/kg-construction/test/: module-comment.cypher  multi-line-multi-statement-with-comments.cypher  multi-line-multi-statement.cypher  multi-statement.cypher  separator-within-comments.cypher  single-statement.cypher
notebooks/rag-examples/: compare-qa-chains.ipynb
